fix: too big space for printing

--- a/wwwroot/assets/style.css
+++ b/wwwroot/assets/style.css
@@ -102,6 +102,7 @@ a.panel {
 
 .toppings>ul>li>h3 {
     margin-bottom: 0;
+    margin-top: 0.5rem;
 }
 
 .steps>ol,
